# labs_cpp_sepmp

./: README.md  float.cpp  int.cpp  interface_list.cpp  interface_vector.cpp  list_class.cpp  matrix.cpp  vector_class.cpp
1lab/: CMakeLists.txt  int.cpp
2lab/: CMakeLists.txt  interface_list.cpp  matrix.hpp
4lab/: 1.1.cpp  1.2.cpp  2.1.cpp  3.1.cpp  3.2.cpp  4.cpp
firstlab/: CMakeLists.txt  float.cpp  interface_list.cpp  list_class.cpp  list_class.hpp  subvector.cpp  subvector.hpp
secondlab/: CMakeLists.txt  interface_list.cpp  interface_list.hpp  interface_vector.cpp  interface_vector.hpp  matrix.cpp
