cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_library(subvector STATIC subvector.cpp)
target_include_directories(subvector PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
add_executable(int_demo int.cpp)
add_executable(float_demo float.cpp)
add_executable(list list_class.cpp)
target_include_directories(list_demo PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
message(STATUS "Project configured for: int_demo, float_demo, list_demo and subvector_lib")